--- a/public/index.html
+++ b/public/index.html
@@ -1978,12 +1978,14 @@
 
                 // API returns array directly with snake_case keys
                 if (Array.isArray(data) && data.length > 0) {
-                    results.innerHTML = data.slice(0, 8).map(item => `
-                        <div class="search-result" onclick="importFromUSDA('${item.fdc_id}', '${item.description.replace(/'/g, "\\'")}')">
+                    results.innerHTML = data.slice(0, 8).map(item => {
+                        const escapedDesc = item.description.replace(/'/g, "\\'").replace(/"/g, '&quot;');
+                        return `
+                        <div class="search-result" onclick="importFromUSDA('${item.fdc_id}', '${escapedDesc}')">
                             <h4>${item.description}</h4>
                             <p>USDA ${item.data_type || 'Food'} · Click to import</p>
                         </div>
-                    `).join('');
+                    `}).join('');
                 } else {
                     results.innerHTML = `<div class="empty-state" style="padding: 20px;"><p>No results found. Try a different search term.</p></div>`;
                 }
