--- a/public/index.html
+++ b/public/index.html
@@ -575,15 +575,17 @@
         }
 
         .ingredient-checkbox-grams input {
-            width: 80px;
+            width: 70px;
             padding: 8px 10px;
             text-align: center;
             font-size: 0.9rem;
+            font-weight: 600;
         }
 
         .ingredient-checkbox-grams span {
-            color: rgba(255, 255, 255, 0.6);
-            font-size: 0.85rem;
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 1rem;
+            font-weight: 600;
         }
 
         .nutrient-bars {
@@ -1757,9 +1759,13 @@
                                 <label>Select Recipe</label>
                                 <select id="recipe-select" onchange="loadRecipeIngredientCheckboxes()"></select>
                             </div>
-                            <div class="checkbox-actions" style="display: flex; gap: 10px; margin: 15px 0;">
+                            <div class="checkbox-actions" style="display: flex; gap: 10px; margin: 15px 0; flex-wrap: wrap;">
                                 <button class="btn btn-sm" onclick="selectAllIngredients()">Select All</button>
                                 <button class="btn btn-sm" onclick="clearAllIngredients()">Clear All</button>
+                                <span style="color: rgba(255,255,255,0.5); padding: 0 8px;">|</span>
+                                <button class="btn btn-sm" onclick="applyPreset('balanced')" title="50% protein, 25% carbs, 20% veggies, 5% fats">Balanced</button>
+                                <button class="btn btn-sm" onclick="applyPreset('highProtein')" title="60% protein, 20% carbs, 15% veggies, 5% fats">High Protein</button>
+                                <button class="btn btn-sm" onclick="applyPreset('lowFat')" title="50% protein, 30% carbs, 18% veggies, 2% fats">Low Fat</button>
                             </div>
                             <div id="ingredient-checkbox-list" class="ingredient-checkbox-list">
                                 <div class="empty-state"><span>🥩</span><p>Add ingredients first, then check the ones to include in this recipe</p></div>
@@ -3018,6 +3024,7 @@
 
             if (!recipeId || allIngredientsCache.length === 0) {
                 list.innerHTML = `<div class="empty-state"><span>🥩</span><p>Add ingredients first, then check the ones to include in this recipe</p></div>`;
+                updatePercentageTotal();
                 return;
             }
 
@@ -3031,26 +3038,55 @@
                 console.error('Error loading recipe:', err);
             }
 
-            // Create checkbox list
+            // Create checkbox list with percentage inputs
             list.innerHTML = allIngredientsCache.map(ing => {
                 const existing = existingIngredients.find(ri => ri.ingredient_id === ing.id);
                 const isChecked = existing ? 'checked' : '';
-                const grams = existing ? existing.grams : 100;
+                const percentage = existing ? existing.percentage : 10; // Default 10%
                 return `
-                    <div class="ingredient-checkbox-item ${isChecked ? 'checked' : ''}" data-id="${ing.id}">
+                    <div class="ingredient-checkbox-item ${isChecked ? 'checked' : ''}" data-id="${ing.id}" data-kcal="${ing.kcal_per_100g || 0}">
                         <input type="checkbox" id="ing-check-${ing.id}" ${isChecked}
                                onchange="toggleIngredientCheck(this, ${ing.id})">
                         <div class="ingredient-checkbox-info">
                             <div class="ingredient-checkbox-name">${ing.name}</div>
-                            <div class="ingredient-checkbox-macros">${ing.kcal_per_100g?.toFixed(0) || 0} kcal | ${ing.protein_g_per_100g?.toFixed(0) || 0}g P | ${ing.fat_g_per_100g?.toFixed(0) || 0}g F</div>
+                            <div class="ingredient-checkbox-macros">${ing.kcal_per_100g?.toFixed(0) || 0} kcal/100g | ${ing.protein_g_per_100g?.toFixed(0) || 0}g P | ${ing.fat_g_per_100g?.toFixed(0) || 0}g F</div>
                         </div>
                         <div class="ingredient-checkbox-grams">
-                            <input type="number" id="ing-grams-${ing.id}" value="${grams}" min="1" placeholder="g">
-                            <span>g</span>
+                            <input type="number" id="ing-pct-${ing.id}" value="${percentage}" min="0.1" max="100" step="0.5"
+                                   onchange="updatePercentageTotal()" oninput="updatePercentageTotal()">
+                            <span>%</span>
                         </div>
                     </div>
                 `;
             }).join('');
+
+            updatePercentageTotal();
+        }
+
+        function updatePercentageTotal() {
+            const checkedItems = document.querySelectorAll('#ingredient-checkbox-list .ingredient-checkbox-item');
+            let total = 0;
+            checkedItems.forEach(item => {
+                const checkbox = item.querySelector('input[type="checkbox"]');
+                if (checkbox && checkbox.checked) {
+                    const pctInput = item.querySelector('input[type="number"]');
+                    total += parseFloat(pctInput?.value) || 0;
+                }
+            });
+
+            // Update or create total display
+            let totalDisplay = document.getElementById('percentage-total-display');
+            if (!totalDisplay) {
+                totalDisplay = document.createElement('div');
+                totalDisplay.id = 'percentage-total-display';
+                totalDisplay.style.cssText = 'padding: 12px; text-align: center; font-weight: 600; border-radius: 8px; margin-top: 10px;';
+                document.getElementById('ingredient-checkbox-list')?.after(totalDisplay);
+            }
+
+            const isValid = total >= 99 && total <= 101;
+            totalDisplay.style.background = isValid ? 'rgba(16, 185, 129, 0.2)' : 'rgba(239, 68, 68, 0.2)';
+            totalDisplay.style.color = isValid ? '#10b981' : '#ef4444';
+            totalDisplay.innerHTML = `Total: ${total.toFixed(1)}% ${isValid ? '✓' : '(must equal 100%)'}`;
         }
 
         function toggleIngredientCheck(checkbox, ingredientId) {
@@ -3060,6 +3096,7 @@
             } else {
                 item.classList.remove('checked');
             }
+            updatePercentageTotal();
         }
 
         function selectAllIngredients() {
@@ -3067,6 +3104,7 @@
                 cb.checked = true;
                 cb.closest('.ingredient-checkbox-item')?.classList.add('checked');
             });
+            updatePercentageTotal();
         }
 
         function clearAllIngredients() {
@@ -3074,6 +3112,64 @@
                 cb.checked = false;
                 cb.closest('.ingredient-checkbox-item')?.classList.remove('checked');
             });
+            updatePercentageTotal();
+        }
+
+        function applyPreset(presetName) {
+            // Presets define percentage distributions by ingredient category
+            const presets = {
+                balanced: { protein: 50, carbs: 25, veggies: 20, fats: 5 },
+                highProtein: { protein: 60, carbs: 20, veggies: 15, fats: 5 },
+                lowFat: { protein: 50, carbs: 30, veggies: 18, fats: 2 }
+            };
+
+            const preset = presets[presetName];
+            if (!preset) return;
+
+            // Keywords to categorize ingredients
+            const categories = {
+                protein: ['beef', 'chicken', 'turkey', 'lamb', 'pork', 'venison', 'bison', 'duck', 'rabbit', 'salmon', 'fish', 'sardine', 'mackerel', 'cod', 'egg', 'liver', 'heart', 'kidney', 'gizzard'],
+                carbs: ['rice', 'oatmeal', 'quinoa', 'barley', 'millet', 'potato', 'lentil', 'pasta'],
+                veggies: ['broccoli', 'carrot', 'green bean', 'pea', 'sweet potato', 'pumpkin', 'spinach', 'kale', 'zucchini', 'celery', 'cucumber', 'squash', 'brussels', 'cabbage', 'cauliflower', 'asparagus', 'beet', 'blueberr', 'cranberr', 'apple', 'banana', 'watermelon', 'cantaloupe', 'strawberr', 'raspberr', 'blackberr', 'mango', 'pear', 'peach'],
+                fats: ['oil', 'coconut', 'flax', 'olive', 'salmon oil', 'fish oil', 'chia', 'hemp', 'seed']
+            };
+
+            // Get all checked items and categorize them
+            const items = document.querySelectorAll('#ingredient-checkbox-list .ingredient-checkbox-item');
+            const categorizedItems = { protein: [], carbs: [], veggies: [], fats: [] };
+
+            items.forEach(item => {
+                const checkbox = item.querySelector('input[type="checkbox"]');
+                if (!checkbox?.checked) return;
+
+                const name = item.querySelector('.ingredient-checkbox-name')?.textContent?.toLowerCase() || '';
+
+                // Determine category
+                let assigned = false;
+                for (const [category, keywords] of Object.entries(categories)) {
+                    if (keywords.some(kw => name.includes(kw))) {
+                        categorizedItems[category].push(item);
+                        assigned = true;
+                        break;
+                    }
+                }
+                // Default uncategorized to veggies
+                if (!assigned) categorizedItems.veggies.push(item);
+            });
+
+            // Distribute percentages within each category
+            for (const [category, items] of Object.entries(categorizedItems)) {
+                const totalPct = preset[category];
+                const perItem = items.length > 0 ? totalPct / items.length : 0;
+
+                items.forEach(item => {
+                    const input = item.querySelector('input[type="number"]');
+                    if (input) input.value = perItem.toFixed(1);
+                });
+            }
+
+            updatePercentageTotal();
+            showToast(`Applied "${presetName}" preset - adjust percentages as needed`, 'success');
         }
 
         async function saveRecipeIngredients() {
@@ -3083,22 +3179,30 @@
                 return;
             }
 
-            // Get all checked ingredients with their grams
+            // Get all checked ingredients with their percentages
             const checkedItems = document.querySelectorAll('#ingredient-checkbox-list .ingredient-checkbox-item');
             const ingredientsToAdd = [];
+            let totalPercentage = 0;
 
             checkedItems.forEach(item => {
                 const checkbox = item.querySelector('input[type="checkbox"]');
-                if (checkbox.checked) {
+                if (checkbox && checkbox.checked) {
                     const ingredientId = parseInt(item.dataset.id);
-                    const gramsInput = item.querySelector('input[type="number"]');
-                    const grams = parseFloat(gramsInput.value) || 100;
-                    ingredientsToAdd.push({ ingredient_id: ingredientId, grams: grams });
+                    const pctInput = item.querySelector('input[type="number"]');
+                    const percentage = parseFloat(pctInput?.value) || 10;
+                    totalPercentage += percentage;
+                    ingredientsToAdd.push({ ingredient_id: ingredientId, percentage: percentage });
                 }
             });
 
             if (ingredientsToAdd.length === 0) {
                 showToast('Please check at least one ingredient', 'error');
+                return;
+            }
+
+            // Validate percentages sum to ~100%
+            if (totalPercentage < 99 || totalPercentage > 101) {
+                showToast(`Percentages must sum to 100% (currently ${totalPercentage.toFixed(1)}%)`, 'error');
                 return;
             }
 
@@ -3160,7 +3264,7 @@
                                     <div class="recipe-ingredient-item">
                                         <span>${i.ingredient_name || i.name}</span>
                                         <div style="display: flex; align-items: center; gap: 12px;">
-                                            <strong>${i.grams}g</strong>
+                                            <strong>${i.percentage}%</strong>
                                             <button class="btn btn-sm btn-delete" style="padding: 4px 8px;" onclick="removeIngredientFromRecipe(${recipe.id}, ${i.ingredient_id})">✕</button>
                                         </div>
                                     </div>
@@ -3776,14 +3880,14 @@
                 }
 
                 adjustmentsDiv.innerHTML = simulatorData.recipe.ingredients.map(ing => {
-                    simulatorData.originalAmounts[ing.ingredient_id] = ing.grams;
-                    simulatorData.currentAmounts[ing.ingredient_id] = ing.grams;
+                    simulatorData.originalAmounts[ing.ingredient_id] = ing.percentage;
+                    simulatorData.currentAmounts[ing.ingredient_id] = ing.percentage;
                     return `
                         <div class="adjustment-row">
                             <label>${ing.ingredient_name}</label>
-                            <span class="current-value">Current: ${ing.grams}g</span>
-                            <input type="number" id="adj-${ing.ingredient_id}" value="${ing.grams}" min="0" step="1">
-                            <span>g</span>
+                            <span class="current-value">Current: ${ing.percentage}%</span>
+                            <input type="number" id="adj-${ing.ingredient_id}" value="${ing.percentage}" min="0" max="100" step="0.5">
+                            <span>%</span>
                         </div>
                     `;
                 }).join('');
@@ -3845,15 +3949,15 @@
         }
 
         async function runSimulation() {
-            // Collect current amounts
+            // Collect current percentage amounts
             const adjustments = [];
             simulatorData.recipe.ingredients.forEach(ing => {
                 const input = document.getElementById(`adj-${ing.ingredient_id}`);
-                const newGrams = parseFloat(input.value) || 0;
-                simulatorData.currentAmounts[ing.ingredient_id] = newGrams;
+                const newPercentage = parseFloat(input.value) || 0;
+                simulatorData.currentAmounts[ing.ingredient_id] = newPercentage;
                 adjustments.push({
                     ingredient_id: ing.ingredient_id,
-                    new_grams: newGrams
+                    new_percentage: newPercentage
                 });
             });
 
